--- a/index.html
+++ b/index.html
@@ -1,167 +1,156 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dati Serali - Ore 20</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 20px;
-      background-color: #f5f5f5;
-    }
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      background-color: white;
-      padding: 25px;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-    h1 {
-      color: #2c3e50;
-      text-align: center;
-      margin-bottom: 25px;
-    }
-    .form-group {
-      margin-bottom: 20px;
-    }
-    label {
-      display: block;
-      font-weight: 600;
-      margin-bottom: 8px;
-    }
-    input[type="text"], select {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    .submit-section {
-      text-align: center;
-      margin-top: 30px;
-    }
-    button {
-      background-color: #007bff;
-      color: white;
-      border: none;
-      padding: 12px 25px;
-      font-size: 16px;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:disabled {
-      background-color: #aaa;
-    }
-    button:hover:not(:disabled) {
-      background-color: #0056b3;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Dati Serali - Ore 20</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      background: #f5f5f5;
+      max-width: 500px;
+      margin: auto;
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    label {
+      display: block;
+      margin-top: 15px;
+      font-weight: bold;
+    }
+    input, select {
+      width: 100%;
+      padding: 12px;
+      margin-top: 6px;
+      font-size: 16px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+    button {
+      width: 100%;
+      padding: 12px;
+      margin-top: 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      background-color: #0088cc;
+      color: white;
+    }
+  </style>
 </head>
 <body>
-<div class="container">
-  <h1>DATI SERALI - ORE 20</h1>
 
-  <div class="form-group">
-    <label for="punto-vendita">Punto Vendita</label>
-    <select id="punto-vendita" required>
-      <option value="">Seleziona punto vendita</option>
-      <option value="FANO">FANO</option>
-      <option value="MONSANO">MONSANO</option>
-      <option value="OSIMO">OSIMO</option>
-      <option value="MACERATA">MACERATA</option>
-      <option value="CIVITANOVA">CIVITANOVA</option>
-      <option value="PESARO">PESARO</option>
-      <option value="FOLIGNO">FOLIGNO</option> 
-    </select>
-  </div>
+  <h2>DATI SERALI - ORE 20</h2>
 
-  <div class="form-group"><label>Venduto Giorno</label><input type="text" id="venduto"></div>
-  <div class="form-group"><label>AV Budget Mese %</label><input type="text" id="budget"></div>
-  <div class="form-group"><label>Delta Mese (€)</label><input type="text" id="delta_mese"></div>
-  <div class="form-group"><label>Delta Week in corso (€)</label><input type="text" id="delta_week"></div>
-  <div class="form-group"><label>PROMO 50</label><input type="text" id="promo50"></div>
-  <div class="form-group"><label>PROMO 100</label><input type="text" id="promo100"></div>
-  <div class="form-group"><label>PROMO ALTERNATIVE</label><input type="text" id="promo_alternative"></div>
-  <div class="form-group"><label>Finanziamenti / Safeguard</label><input type="text" id="safeguard"></div>
-  <div class="form-group"><label>Delta EKOS Mese (Euro)</label><input type="text" id="ekos"></div>
-  <div class="form-group"><label>Delta SBS Mese (Euro)</label><input type="text" id="sbs"></div>
-  <div class="form-group"><label>Delta XDE Mese Totale (Euro)</label><input type="text" id="xde"></div>
-  <div class="form-group"><label>iPhone Totali / Garanzie</label><input type="text" id="iphone"></div>
-  <div class="form-group"><label>Apple Info / Garanzie</label><input type="text" id="apple"></div>
-  <div class="form-group"><label>Attivazioni HO</label><input type="text" id="ho"></div>
-  <div class="form-group"><label>Attivazioni Very Mobile</label><input type="text" id="very"></div>
-  <div class="form-group"><label>OLED</label><input type="text" id="oled"></div>
-  <div class="form-group"><label>AEG Bianco</label><input type="text" id="aeg"></div>
-  <div class="form-group"><label>Asciugatrici</label><input type="text" id="asciugatrici"></div>
-  <div class="form-group"><label>Scope No Fili</label><input type="text" id="scope"></div>
-  <div class="form-group"><label>I-Robot</label><input type="text" id="irobot"></div>
-  <div class="form-group"><label>Caffè Automatiche</label><input type="text" id="caffe"></div>
+  <form id="dataForm">
+    <label for="puntoVendita">Punto Vendita</label>
+    <select id="puntoVendita" required>
+      <option value="">Seleziona...</option>
+      <option>Fano</option>
+      <option>Monsano</option>
+      <option>Osimo</option>
+      <option>Macerata</option>
+      <option>Civitanova</option>
+      <option>Pesaro</option>
+      <option>Foligno</option>
+    </select>
 
-  <div class="submit-section">
-    <button id="submitBtn" onclick="inviaTelegram()">Invia Report Serali</button>
-  </div>
-</div>
+    <label>Venduto Giorno</label>
+    <input type="text" id="venduto">
 
-<script>
-  function inviaTelegram() {
-    const btn = document.getElementById('submitBtn');
-    btn.disabled = true;
-    btn.innerText = 'Invio in corso...';
+    <label>AV Budget Mese %</label>
+    <input type="text" id="budget">
 
-    const get = id => document.getElementById(id)?.value?.trim() || '';
+    <label>Delta Mese (€)</label>
+    <input type="text" id="delta_mese">
 
-    const pv = get('punto-vendita');
-    
-    if (!pv) {
-      alert('Seleziona il punto vendita prima di inviare.');
-      btn.disabled = false;
-      btn.innerText = 'Invia Report Serali';
-      return;
-    }
-    
-    const msg = `DATI SERALI ORE 20:
+    <label>Delta Week in corso (€)</label>
+    <input type="text" id="delta_mese">
 
-PUNTO VENDITA: ${pv}
+    <label>Finanziamenti / Safeguard</label>
+    <input type="text" id="safeguard">
 
-VENDUTO : €${get('venduto')}
-AV BUDGET MESE : ${get('budget')}%
-DELTA MESE €${get('delta_mese')}
-DELTA WEEK IN CORSO €${get('delta_week')}
+    <label>Delta EKOS Mese (Euro)</label>
+    <input type="text" id="ekos">
 
-PROMO 50: ${get('promo50')}
-PROMO 100: ${get('promo100')}
-PROMO ALTERNATIVE: ${get('promo_alternative')}
+    <label>Delta SBS Mese (Euro)</label>
+    <input type="text" id="sbs">
 
-FINANZ./SAFEGUARD ${get('safeguard')}
+    <label>Delta XDE Mese Totale (Euro)</label>
+    <input type="text" id="xde">
 
-DELTA EKOS MESE €${get('ekos')}
-DELTA SBS MESE €${get('sbs')}
-DELTA XDE MESE €${get('xde')}
+    <label>iPhone Totali / Garanzie</label>
+    <input type="text" id="iphone">
 
-APPLE IPHONE/GAR. ${get('iphone')}
-APPLE PC /GAR. ${get('apple')}
+    <label>Apple Info / Garanzie</label>
+    <input type="text" id="apple">
 
-ATTIVAZIONI HO ${get('ho')}
-ATTIVAZIONI VERY ${get('very')}
+    <label>Attivazioni HO</label>
+    <input type="text" id="ho">
 
-OLED ${get('oled')}
-AEG ${get('aeg')}
-ASCIUGA ${get('asciugatrici')}
-SCOPE NO FILI ${get('scope')}
-I-ROBOT ${get('irobot')}
-CAFFE’AUTOM. ${get('caffe')}
-    `.trim().replace(/^\s*\n/gm, '');
+    <label>Attivazioni Very Mobile</label>
+    <input type="text" id="very">
 
-    const telegramUrl = `https://t.me/share/url?url=&text=${encodeURIComponent(msg)}`;
-    window.open(telegramUrl, '_blank');
-    
-    setTimeout(() => {
-        btn.disabled = false;
-        btn.innerText = 'Invia Report Serali';
-    }, 1000);
-  }
-</script>
+    <label>OLED</label>
+    <input type="text" id="oled">
+
+    <label>AEG Bianco</label>
+    <input type="text" id="aeg">
+
+    <label>Asciugatrici</label>
+    <input type="text" id="asciugatrici">
+
+    <label>Scope No Fili</label>
+    <input type="text" id="scope">
+
+    <label>I-Robot</label>
+    <input type="text" id="irobot">
+
+    <label>Caffè Automatiche</label>
+    <input type="text" id="caffe">
+
+    <button type="button" onclick="inviaTelegram()">Invia Telegram</button>
+  </form>
+
+  <script>
+    function inviaTelegram() {
+      const p = id => document.getElementById(id).value || '';
+      const pv = p('puntoVendita');
+
+      if (!pv) {
+        alert("Seleziona il punto vendita prima di inviare.");
+        return;
+      }
+
+      const msg = `DATI SERALI  ORE 20 :\n\n` +
+        `PUNTO VENDITA: ${pv}\n\n` +
+        `VENDUTO : €${p('venduto')}\n` +
+        `AV BUDGET MESE : ${p('budget')}%\n` +
+        `DELTA MESE €${p('delta_mese')}\n` +
+        `DELTA WEEK IN CORSO €${p('delta_mese')}\n` +      
+        `FINANZ./SAFEGUARD ${p('safeguard')}\n\n` +
+        `DELTA EKOS MESE €${p('ekos')}\n` +
+        `DELTA SBS MESE  €${p('sbs')}\n` +
+        `DELTA XDE MESE  €${p('xde')}\n\n` +
+        `APPLE IPHONE/GAR.${p('iphone')}\n` +
+        `APPLE PC /GAR. ${p('apple')}\n\n` +
+        `ATTIVAZIONI HO ${p('ho')}\n` +
+        `ATTIVAZIONI VERY ${p('very')}\n\n` +
+        `OLED ${p('oled')}\n` +
+        `AEG  ${p('aeg')}\n` +
+        `ASCIUGA  ${p('asciugatrici')}\n` +
+        `SCOPE NO FILI ${p('scope')}\n` +
+        `I-ROBOT ${p('irobot')}\n` +
+        `CAFFE’AUTOM. ${p('caffe')}`;
+
+      const encoded = encodeURIComponent(msg);
+      window.open(`https://t.me/share/url?url=&text=${encoded}`, '_blank');
+    }
+  </script>
+
 </body>
 </html>
