--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
     <label>Delta Week in corso (€)</label>
     <input type="text" id="delta_mese">
 
+    <label>Promo 50</label>
+    <input type="text" id="oled">
+
+    <label>Promo 100 </label>
+    <input type="text" id="aeg">
+
+    <label>Promo Alternative </label>
+    <input type="text" id="asciugatrici">
+
     <label>Finanziamenti / Safeguard</label>
     <input type="text" id="safeguard">
 
@@ -131,7 +140,10 @@
         `VENDUTO : €${p('venduto')}\n` +
         `AV BUDGET MESE : ${p('budget')}%\n` +
         `DELTA MESE €${p('delta_mese')}\n` +
-        `DELTA WEEK IN CORSO €${p('delta_mese')}\n` +      
+        `DELTA WEEK IN CORSO €${p('delta_mese')}\n` +     
+        `Promo 50 ${p('oled')}\n` +
+        `Promo 100 ${p('aeg')}\n` +
+        `Promo Alternative ${p('asciugatrici')}\n` +
         `FINANZ./SAFEGUARD ${p('safeguard')}\n\n` +
         `DELTA EKOS MESE €${p('ekos')}\n` +
         `DELTA SBS MESE  €${p('sbs')}\n` +
