--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
     <input type="text" id="delta_mese">
 
     <label>Delta Week in corso (€)</label>
-    <input type="text" id="delta_mese">
+    <input type="text" id="delta_week">
 
     <label>Promo 50</label>
-    <input type="text" id="oled">
+    <input type="text" id="promo 50">
 
     <label>Promo 100 </label>
-    <input type="text" id="aeg">
+    <input type="text" id="promo 100">
 
     <label>Promo Alternative </label>
-    <input type="text" id="asciugatrici">
+    <input type="text" id="alternative">
 
     <label>Finanziamenti / Safeguard</label>
     <input type="text" id="safeguard">
